# digital_twin_esp32c3

./: .my_config.old  CMakeLists.txt  Makefile  README.md  auto_compile.py  git.sh  image_to_ink.py  kconfig  kconfig.py  lufy3.c  qrcode.c  sdkconfig  sdkconfig.old  test.py
components/Config/: CMakeLists.txt
components/Config/include/: DEV_Config.h  Debug.h
components/Config/src/: DEV_Config.c
components/Examples/: CMakeLists.txt
components/Examples/include/: EPD_Test.h  ImageData.h
components/Examples/src/: EPD_2in13_test.c
components/Fonts/: CMakeLists.txt
components/Fonts/include/: fonts.h
components/GUI/: CMakeLists.txt
components/GUI/include/: GUI_Paint.h
components/GUI/src/: GUI_Paint.c
components/e-Paper/: CMakeLists.txt
components/e-Paper/include/: EPD_2in13.h  EPD_2in13bc.h
components/e-Paper/src/: EPD_2in13.c  EPD_2in13bc.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/EPD/: CMakeLists.txt  EPD_2in13bc.cpp
main/EPD/include/: Debug.h
main/my_config/: .my_config  .my_config.old  my_config.h
main/websocket_task/: websocket_task.c  websocket_task.h
