idf_component_register(SRCS
                         "DEV_Config.cpp"
                         "EPD_2in13bc.cpp"
                         "EPD_SDCard.cpp"
                         "font8.cpp"
                         "font12.cpp"
                         "font16.cpp"
                         "font20.cpp"
                         "font24.cpp"
                         "GUI_Paint.cpp"
                         "SPI_RAM.cpp"
                         "ImageData.cpp"
                         "EPD.h"
                    INCLUDE_DIRS "include")
